--- a/todo/templates/todo/task_list.html
+++ b/todo/templates/todo/task_list.html
@@ -7,17 +7,27 @@
     <h1>{{ request.user.username }}님의 ToDo List</h1>
     <a href="{% url 'task_create' %}">+ Add Task</a> |
     <a href="{% url 'logout' %}">로그아웃</a>
-    <ul>
-        {% for task in tasks %}
-            <li>
-                <b>{{ task.title }}</b> - {{ task.description }} 
-                {% if task.completed %}(완료됨){% endif %}
-                <a href="{% url 'task_update' task.id %}">수정</a>
-                <a href="{% url 'task_delete' task.id %}">삭제</a>
-            </li>
-        {% empty %}
-            <li>할 일이 없습니다.</li>
-        {% endfor %}
-    </ul>
+
+    <table border="1" style="margin-top:10px;">
+    <tr>
+        <th>제목</th>
+        <th>완료</th>
+        <th>마감일</th>
+        <th>액션</th>
+    </tr>
+    {% for task in tasks %}
+    <tr>
+        <td>{{ task.title }}</td>
+        <td>{{ task.completed }}</td>
+        <td>{{ task.due_date|default:"-" }}</td>
+        <td>
+        <a href="{% url 'task_update' task.id %}">수정</a>
+        <a href="{% url 'task_delete' task.id %}">삭제</a>
+        </td>
+    </tr>
+    {% endfor %}
+    </table>
+
+    <a href="{% url 'calendar' %}"><button style="margin-top: 20px;">캘린더 보기</button></a>
 </body>
 </html>
